theme/kiwifruit/style/core.css
* {
    margin: 0;
}
html {
    height:100%;
    background:#BFBFB3 url([[pix:theme|nav-bg-tile]]) repeat-x center top;
}
body,
body.popup {
    height:100%;
    background:#F2F3E1 url([[pix:theme|nav-bg-tile]]) repeat-x center top;
}
body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ul,
ol,
dl,
input,
button,
textarea {
    font-family:'Open Sans', Arial, Helvetica, sans-serif;
    font-weight:400;
    color:#6b6b6b;
}
/**
 * Links
 */
a {
    color:#00ACA8;
}
a:visited {
    color:#00ACA8;
}
a:hover {
    color:#00ACA8;
}
/**
 * Headings
 */
h1,
h2,
h3,
h4,
h5,
h6 {
    color:#444444;
}
h1 {
    font-size:1.9em;
    margin:5px 0 15px;
}
h2 {
    font-size:1.5em;
    line-height:1.1em;
    border:none;
    padding:0;
    margin:5px 0 15px;
}
h3 {
    font-size:1.35em;
    padding:0;
    margin:5px 0 15px;
}
h4 {
    font-size:1.2em;
    font-weight:normal;
    padding:0;
    margin:5px 0 10px;
}
h5 {
    font-size:1.1em;
    margin:5px 0 5px;
}
h6 {
    font-size:1em;
    margin:5px 0 5px;
}
h1.main,
h2.main,
h3.main,
h4.main,
h5.main,
h6.main {
    font-weight:400;
    text-align:left;
}
.dir-rtl h1.main,
.dir-rtl h2.main,
.dir-rtl h3.main,
.dir-rtl h4.main,
.dir-rtl h5.main,
.dir-rtl h6.main {
    text-align:right;
}
h1.main,
h2.main,
h2.header,
#region-main h1,
#region-main h2 {
    font-size:200%;
    font-size:1.9em;
    font-weight:300;
    color:#FFFFFF;
    padding:0em 0.5em 0.1em 0.5em;
    margin:0 0 15px;
    line-height:1.4em;
    letter-spacing:-1px;
    background:#b1bb1a;
    text-align: left;
}
h1.main a,
h2.main a,
h2.header a {
    color:#FFFFFF;
}
h1.centered,
h2.centered,
h3.centered,
h4.centered,
h5.centered,
h6.centered {
    text-align:center;
}
th.header,
td.header,
div.header,
.navbar {
    background:#E0E1Cf;
}
/**
 * Tables
 */
th,
td,
.formtable tbody th,
.generaltable th.header {
    text-align:left;
}
.dir-rtl th,
.dir-rtl td,
.dir-rtl .formtable tbody th,
.dir-rtl .generaltable th.header {
    text-align:right;
}
tr.r0 {
   background:transparent;
}
tr.r1 {
   background:#f7f7f7;
}
.generalbox,
.totarabox,
.admin .generalbox,
.generaltable,
.userenrolment,
.forumheaderlist,
#page-mod-forum-view .forumheaderlist {
    color:#6B6B6B;
    border:1px solid #DDD;
    border-collapse:collapse;
    background-color:#FFFFFF;
    border-color:#E0E1Cf;
}
#intro.generalbox {
    width:auto;
}
.flexible th,
.flexibletable th {
   white-space:normal;
   line-height:1.2em;
   vertical-align:bottom;
}
.generaltable.mdl-align {
    margin:0 auto;
}
.generaltable td {
    border:none;
    vertical-align:top;
}
.generaltable .cell {
    background-color:#FFFFFF;
    border-color:#E0E1Cf;
}
table.invisible th.header {
    background:none;
    padding:0;
}
table.invisible td,
table.fullwidth .empty td {
   padding:0 !important;
}
table.fullwidth .empty td.col0,
table.fullwidth .empty td.col1,
table.fullwidth .empty td.col2,
table.fullwidth .empty td.col3,
table.fullwidth .empty td.col4,
table.fullwidth .empty td.col5,
table.fullwidth .empty td.col6,
table.fullwidth .empty td.col7,
table.fullwidth .empty td.col8,
table.fullwidth .empty td.col9,
table.fullwidth .empty td.col10 {
   padding:0.5em !important;
}
table.invisible {
    padding:0;
    margin:0;
}
table.invisible tr.r1,
table.invisiblepadded tr.r1 {
    background-color:transparent;
}
table.invisiblepadded th.header {
    background:none;
    padding:5px;
}

table.invisiblepadded td{
   padding:5px;
}

.course_icon, .program_icon{
    padding-right:5px;
    vertical-align:top;
}
.savechanges-content,
.program-savechanges {
    margin:5px 0;
}

table#hierarchy-bulk-action {
    border:0px;
    margin-top:5px;
}

table#hierarchy-bulk-action td.option-column div.fitem div.fitemtitle,
table#hierarchy-bulk-action td.action-column div.fitem div.fitemtitle {
    display:none;
}
#page-mod-forum-view .forumheaderlist td {
    border:none;
}
.totara_alerts_actions .totara_messages_actions,
.totara_alerts_actions .totara_messages_actions input {
    margin:0;
}
.logtable td,
.path-mod-forum .forumheaderlist .discussion .lastpost {
    font-size: 0.9em;
    border:none;
    vertical-align:middle;
}
.forumheaderlist td.starter,
#page-mod-forum-view .forumheaderlist .discussion .starter {
    font-weight:bold;
    text-align:left;
    background:transparent;
}
.dir-rtl .forumheaderlist td.starter,
.dir-rtl  #page-mod-forum-view .forumheaderlist .discussion .starter {
    text-align:right;
}
.forumpost {
     border:none;
     background:#FFF;
}
.forumpost .row,
.forumpost .row.header,
.forumpost .row.header .left,
.forumpost .row.header .topic,
.forumpost.firstpost .row.header {
    background:transparent;
}
.forumpost .topic .subject {
    font-size:1.4em;
    font-weight:600;
    line-height:1.2em;
}
.forumpost .picture img {
    margin:10px;
}
.forumpost .row.header .topic {
    padding:5px 10px 0;
}
.forumpost .options,
.forumpost .topic .author,
#page-site-index .subscribelink,
.path-course-view .subscribelink {
    font-size:0.85em;
}
.dir-ltr .forumpost .options,
.dir-ltr .forumpost .topic .author,
.dir-ltr #page-site-index .subscribelink,
.dir-ltr .path-course-view .subscribelink {
    padding-right:10px;
}
.dir-rtl .forumpost .options,
.dir-rtl .forumpost .topic .author,
.dir-rtl #page-site-index .subscribelink,
.dir-rtl .path-course-view .subscribelink {
    padding-left:10px;
}
.forumpost .content .posting {
    padding:0 15px 10px;
}
/**
 * Boxes
 */
.headingblock {
    border:none;
    background:transparent;
}
h2.headingblock {
    font-size:2em;
    font-weight:300;
}
#page-course-category .courseboxes,
#page-course-index .courseboxes {
    padding:10px 0;
    border:none;
}
.coursebox {
    margin:0 auto 0;
    border:none;
    border-bottom:1px dotted #DDDDDD;
    background:#FFFFFF;
}
.coursebox .name img,
.coursebox .name img a {
    float:left;
}
.dir-rtl .coursebox .name img,
.dir-rtl .coursebox .name img a {
    float:right;
}
/* ... */

